@@ -1,0 +1,19 @@
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    style="@style/Layout.Main.Padding" >
+
+    <LinearLayout style="@style/Layout.WrapVertical" >
+
+        <TextView
+            android:id="@+id/txtTime"
+            style="@style/TextView"
+            android:layout_weight="1"
+            android:text="@string/labelData" />
+
+        <CheckBox
+            android:id="@+id/chkEnableData"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
+
+</LinearLayout>
